--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,6 @@ test:
 production:
   <<: *default
   database: social-media-tracker_production
-  username: social-media-tracker
-  password: <%= ENV['SOCIAL-MEDIA-TRACKER_DATABASE_PASSWORD'] %>
+  username: rails
+  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
+  host: localhost
